--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8092
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mysql://localhost:3306/test_db
-spring.datasource.url=jdbc:mysql://db.ccb27u4ngh0j.ap-south-1.rds.amazonaws.com:3306/patientservice?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://db.ccb27u4ngh0j.ap-south-1.rds.amazonaws.com:3306/patientServicedatabase1?createDatabaseIfNotExist=true
 #spring.datasource.url=jdbc:mysql://15.206.64.114:3306/patientservice?createDatabaseIfNotExist=true
 spring.datasource.username=admin
 #spring.datasource.password=R@vi1106
@@ -11,14 +11,3 @@ spring.datasource.platform=mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
-
-
-
-
-
-
-
-
-
-
