--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,11 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mysql://localhost:3306/test_db
 #spring.datasource.url=jdbc:mysql://local:3306/patientServicedatabase?createDatabaseIfNotExist=true
-spring.datasource.url=jdbc:mysql://db.ccb27u4ngh0j.ap-south-1.rds.amazonaws.com:3306/PatientServicedatabase?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://40.82.154.151:3306/patientservice?createDatabaseIfNotExist=true
 #spring.datasource.url=jdbc:mysql://15.206.64.114:3306/patientservice?createDatabaseIfNotExist=true
-spring.datasource.username=admin
+spring.datasource.username=root
 #spring.datasource.password=R@vi1106
-spring.datasource.password=qwerty12345
+spring.datasource.password=root
 spring.datasource.platform=mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
